--- a/jailbreak.html
+++ b/jailbreak.html
@@ -44,7 +44,7 @@
 
     <nav class="navbar sticky-top navbar-light bg-light">
       <a class="navbar-brand" href="https://ayouch.me">
-        <img src="https://blog.ayouch.me/assets/images/profile.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="https://pbs.twimg.com/profile_images/938502178830012422/fqt_319v_400x400.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
       </a>
     </nav>
     <div class="container-fluid">
