--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@ var STYLE_PREFIX = 'wsite';
 	}
 //-->
 </script>
+		
+		<script type='application/ld+json'>{"@context":"https://schema.org","@type":"Person","url":"https://ayouch.me/","sameAs":["https://www.facebook.com/yassineayouch","https://instagram.com/yassineay0uch/","https://www.linkedin.com/in/yassineayouch","https://twitter.com/yassineayouch"],"@id":"#person","name":"Yassine Ayouch"}</script>
+
 	</head>
 	<body class="header-page  wsite-page-index  product-aspect-ratio-square  wsite-theme-dark"><div class="wrapper">
     <div class="page-content">
