--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head><script src="gdpr/gdprscript.js"></script>
-		<title>Yassine Ayouch - Home</title><meta property="og:site_name" content="Yassine Ayouch" />
+		<title>Yassine Ayouch - eCommerce Entrepreneur</title><meta property="og:site_name" content="Yassine Ayouch" />
 <meta property="og:title" content="Yassine Ayouch" />
 <meta property="og:description" content="My name is Yassine Ayouch. I&#039;m a 19 year old Entrepreneur who loves innovating." />
 <meta property="og:url" content="https://www.ayouch.me/" />
