--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@ var STYLE_PREFIX = 'wsite';
 </script>
 		
 		<script type='application/ld+json'>{"@context":"https://schema.org","@type":"Person","url":"https://ayouch.me/","sameAs":["https://www.facebook.com/yassineayouch","https://instagram.com/yassineay0uch/","https://www.linkedin.com/in/yassineayouch","https://twitter.com/yassineayouch"],"@id":"#person","name":"Yassine Ayouch"}</script>
+<meta name="google-site-verification" content="Peg6LhW4qKP2D2sdbFiboSMwxZzz_Lm7AkOcpusnavk" />
 
 	</head>
 	<body class="header-page  wsite-page-index  product-aspect-ratio-square  wsite-theme-dark"><div class="wrapper">
