--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head><script src="gdpr/gdprscript.js"></script>
+	<head>
 		<title>Yassine Ayouch - eCommerce Entrepreneur</title><meta property="og:site_name" content="Yassine Ayouch" />
 <meta name="google-site-verification" content="Peg6LhW4qKP2D2sdbFiboSMwxZzz_Lm7AkOcpusnavk" />
-
-		<meta property="og:title" content="Yassine Ayouch" />
+<script src="gdpr/gdprscript.js"></script>
+<meta property="og:title" content="Yassine Ayouch" />
 <meta property="og:description" content="My name is Yassine Ayouch. I&#039;m a 19 year old Entrepreneur who loves innovating." />
 <meta property="og:url" content="https://www.ayouch.me/" />
 <meta name="description" content="My name is Yassine Ayouch. I'm a 19 year old Entrepreneur who loves innovating." />
