--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <meta name="description" content="My name is Yassine Ayouch. I'm a 19 year old Entrepreneur who loves innovating." />
 <meta name="keywords" content="Yassine Ayouch, Yassine, Ayouch,Entrepreneur, Young Entrepreneur, CEO, Yassine Ayouch CEO, Yassine Ayouch net worth, Yassine Ayouch" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name=”robots” content=”index, follow”>
   <link rel='shortcut icon' type='image/x-icon' href='https://raw.githubusercontent.com/yassineayouch/yassineayouch.github.io/master/favicon.ico' />
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700|Oswald:700" rel="stylesheet">
 		<link id="wsite-base-style" rel="stylesheet" type="text/css" href="cdn2.editmysite.com/css/sites.css" />
