--- a/spotify.html
+++ b/spotify.html
@@ -9,6 +9,6 @@
         <title>Page Redirection</title>
     </head>
     <body>
-        If you are not redirected automatically, follow this <a href='https://open.spotify.com/playlist/4FqGABuQe9dnlnA9XBQgr3?si=xj8IitUsTFmD1oMXBXEI5w'>link to JMF</a>.
+        If you are not redirected automatically, follow this <a href='https://open.spotify.com/playlist/4FqGABuQe9dnlnA9XBQgr3?si=xj8IitUsTFmD1oMXBXEI5w'>link to Spotify</a>.
     </body>
 </html>
