--- a/jailbreak.html
+++ b/jailbreak.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -53,7 +51,7 @@
         <div id="projects" class="container">
           <h5 class="center title" style="letter-spacing:2px;margin-top: 10%;">DISCLAIMER </h5>
           <p class="card-text">The content of this page is outdated so don't even try to install anything from here because i don't update it anymore!
-if you want to bring this back you can donate and if i receive enough to buy new certificates to sign the app i'll update all the Jailbreak APPS
+i'll probably never bring this back to life because i lost my interest on jailbreaking but if this was helpful for you on the past you can donate using the link below!
 
 </p>
           <br>
