--- a/jailbreak.html
+++ b/jailbreak.html
@@ -61,7 +61,7 @@ i'll probably never bring this back to life because i lost my interest on jailbr
                 <img class="card-img-top img-fluid" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Heart_corazón.svg/1200px-Heart_corazón.svg.png" alt="Logo">
                 <div class="card-body">
                   <h4 class="card-title">SHOW SOME LOVE</h4>
-                  <p class="card-text">Help keeping up the website by considering a small donation
+                  <p class="card-text">Only if this was helpful for you on the past
 
 </p>
                   <a href="https://buymeacoff.ee/ayouch" target="_blank" class="btn btn-primary">DONATE</a>
@@ -157,7 +157,7 @@ i'll probably never bring this back to life because i lost my interest on jailbr
                 <img class="card-img-top img-fluid"  src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Heart_corazón.svg/1200px-Heart_corazón.svg.png" alt="Logo">
                 <div class="card-body">
                   <h4 class="card-title">SHOW SOME LOVE</h4>
-                  <p class="card-text">Help keeping up the website by considering a small donation
+                  <p class="card-text">Only if this was helpful for you on the past
 
 </p>
                   <a href="https://buymeacoff.ee/ayouch" target="_blank" class="btn btn-primary">DONATE</a>
