--- a/companies.html
+++ b/companies.html
@@ -145,7 +145,7 @@ var STYLE_PREFIX = 'wsite';
 		<div class="wsite-section-content">
           <div class="container">
 			<div class="wsite-section-elements">
-				<div class="paragraph"><font color="#ecf0f1"><span><span style="font-weight:400">i mainly do eCommerce and because i'm using the dropshipping business model right now i can't share the name of my stores because this business model is very transparent and anyone with the right knowledge can easily replicate my business if he knows what products i'm selling or my niche that's why it's better for me to stay lowkey about my current companies to don't create unnecessary competiton for myself (you'll understand me better if you're in this game yourself) anyway i'm currently working on transferring some of my niche stores to a long term brand because dropshipping is not really long term.</a><span style="color:rgb(0, 0, 0)">&nbsp;</span><br />&#8203;</div>
+				<div class="paragraph"><font color="#ecf0f1"><span><span style="font-weight:400">lowkey.</a><span style="color:rgb(0, 0, 0)">&nbsp;</span><br />&#8203;</div>
 			</div>
 		</div>
         </div>
