--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Yassine Ayouch - eCommerce Entrepreneur</title><meta property="og:site_name" content="Yassine Ayouch" />
+		<title>Yassine Ayouch - Serial Entrepreneur</title><meta property="og:site_name" content="Yassine Ayouch" />
 <meta name="google-site-verification" content="Peg6LhW4qKP2D2sdbFiboSMwxZzz_Lm7AkOcpusnavk" />
 <script src="gdpr/gdprscript.js"></script>
 <meta property="og:title" content="Yassine Ayouch" />
