--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ var STYLE_PREFIX = 'wsite';
                 <div id="banner">
 				<div class="wsite-section-elements">
 					<h2 class="wsite-content-title"><font color="#d5d5d5">Yassine Ayouch</font></h2>
-<div class="paragraph"><font size="6">eCommerce Entrepreneur</font></div>
+<div class="paragraph"><font size="6">Serial Entrepreneur</font></div>
 <div style="text-align:center;"><div style="height: 10px; overflow: hidden;"></div>
 <a class="wsite-button wsite-button-large wsite-button-highlight" href="about.html" >
 <span class="wsite-button-inner">About</span>
