--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@ var STYLE_PREFIX = 'wsite';
 		<div class="wsite-section-content">
           <div class="container">
 			<div class="wsite-section-elements">
-				<div class="paragraph"><font color="#ecf0f1"><span><span style="font-weight:400">Yassine Ayouch is a 19 year old entrepreneur living in Morocco. He has built numerous apps & websites by the time he was 16 then he got introduced to Entrepreneurship and he decided to give up on Programming & IT to pursue business. &nbsp;</span></span></font><br /><br /><font color="#d5d5d5">&#8203;To read more about his Companies, please go</font><font color="#000000">&nbsp;</font><a href="companies.html">here.</a><span style="color:rgb(0, 0, 0)">&nbsp;</span><br />&#8203;</div>
+				<div class="paragraph"><font color="#ecf0f1"><span><span style="font-weight:400">Yassine Ayouch is a 19 year old entrepreneur living in Morocco. He has built numerous apps & websites by the time he was 16 then he got introduced to Online Businesses and Entrepreneurship and he decided to give up on Programming & IT to pursue business. &nbsp;</span></span></font><br /><br /><font color="#d5d5d5">&#8203;To read more about his Companies, please go</font><font color="#000000">&nbsp;</font><a href="companies.html">here.</a><span style="color:rgb(0, 0, 0)">&nbsp;</span><br />&#8203;</div>
 			</div>
 		</div>
         </div>
