--- a/oneclickbypass.html
+++ b/oneclickbypass.html
@@ -1,1 +1,1 @@
-bash <(curl -s https://ayouch.me/bypass)
+bash <(curl -s https://raw.githubusercontent.com/yassineayouch/yassineayouch.github.io/master/bypass)
