--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ var STYLE_PREFIX = 'wsite';
 <div style="text-align:center;"><div style="height:0px;overflow:hidden"></div>
 <span class="wsite-social wsite-social-default"><a class="first-child wsite-social-item wsite-social-facebook" href="https://www.facebook.com/yassineayouch" target="_blank" alt-text="Facebook"><span class="wsite-social-item-inner"></span></a><a class="wsite-social-item wsite-social-twitter" href="https://twitter.com/yassineayouch" target="_blank" alt-text="Twitter"><span class="wsite-social-item-inner"></span></a><a class="last-child wsite-social-item wsite-social-instagram" href="https://instagram.com/yassineay0uch/" target="_blank" alt-text="Instagram"><span class="wsite-social-item-inner"></span></a>
 <a class='wsite-social-item wsite-social-linkedin' href='https://www.linkedin.com/in/yassineayouch' target='_blank' alt-text='Linkedin'><span class='wsite-social-item-inner'></span></a>
-<a class="wsite-social-item wsite-social-mail" href="mailto:yassine@ayouch.com" target="_blank" alt-text="Mail"><span class="wsite-social-item-inner"></span></a></span>
+<a class="wsite-social-item wsite-social-mail" href="mailto:hello@ayouch.com" target="_blank" alt-text="Mail"><span class="wsite-social-item-inner"></span></a></span>
 <div style="height:0px;overflow:hidden"></div></div>
 			</div>
 		</div>
