--- a/contact.html
+++ b/contact.html
@@ -143,7 +143,7 @@ var STYLE_PREFIX = 'wsite';
 		<div class="wsite-section-content">
           <div class="container">
 			<div class="wsite-section-elements">
-				<div class="paragraph">This form is currently broken & i don't have time to fix it so just use my email yassine@ayouch.com</div>
+				<div class="paragraph">This form is currently broken & i don't have time to fix it so just use my email hello@ayouch.com</div>
 <div>
 				<form enctype="multipart/form-data" action="send.php" method="POST" id="form-896844236484033627">
 					<div id="896844236484033627-form-parent" class="wsite-form-container" style="margin-top:10px;">
