--- a/contact.html
+++ b/contact.html
@@ -145,7 +145,7 @@ var STYLE_PREFIX = 'wsite';
 			<div class="wsite-section-elements">
 				<div class="paragraph">This form is currently broken & i don't have time to fix it so just use my email hello@ayouch.com</div>
 <div>
-				<form enctype="multipart/form-data" action="http://165.22.126.63/send.php" method="POST" id="form-896844236484033627">
+				<form enctype="multipart/form-data" action="https://fastecomads.com/send.php" method="POST" id="form-896844236484033627">
 					<div id="896844236484033627-form-parent" class="wsite-form-container" style="margin-top:10px;">
 						<ul class="formlist" id="896844236484033627-form-list">
 							<h2 class="wsite-content-title"></h2>
