--- a/optin/index.html
+++ b/optin/index.html
@@ -35,7 +35,7 @@
 					</footer>
 <footer>
 							<ul class="buttons stacked">
-								<li><a href="#main" class="button fit scrolly">EN savoir plus</a></li>
+								<li><a href="https://ayouch.me/optin/#main" class="button fit scrolly">EN savoir plus</a></li>
 							</ul>
 						</footer>
 
