--- a/optin/index.html
+++ b/optin/index.html
@@ -62,9 +62,8 @@
 											<h3>plusieurs moyens de paiement</h3>
 										</header>
 										<p>Pour faciliter la tache a nos chers clients on accepte plusieurs moyens de paiement:</p>
-<p>•Virement depuis l'appli de votre banque ou versement chez une agence CIH Bank ou banque populaire</p>
-
-<p>•Transfert cahsplus, wafacash ou damanecash</p>
+<p>•Virement depuis l'appli de votre banque ou versement chez une agence CIH Bank ou banque populaire
+•Transfert cahsplus, wafacash ou damanecash</p>
 									</section>
 
 								</div>
