--- a/optin/index.html
+++ b/optin/index.html
@@ -8,23 +8,7 @@
 	<body class="index">
 		<div id="page-wrapper">
 
-			<!-- Header -->
-				
 
-			<!-- Banner -->
-				<section id="banner">
-
-					<!--
-						".inner" is set up as an inline-block so it automatically expands
-						in both directions to fit whatever's inside it. This means it won't
-						automatically wrap lines, so be sure to use line breaks where
-						appropriate (<br />).
-					-->
-					<div class="inner">
-
-						<header>
-							
-						</header>
 						<p>Abonnement <strong>Netflix</strong> moins cher et avec des moyens de paiement a la disposition de tout le monde
 </p>
 						<footer>
@@ -61,9 +45,9 @@
 										<header>
 											<h3>plusieurs moyens de paiement</h3>
 										</header>
-										<p>Pour faciliter la tache a nos chers clients on accepte plusieurs moyens de paiement:
-										•Virement depuis l'appli de votre banque ou versement chez une agence CIH Bank ou banque populaire</p>
-<p>•Transfert cahsplus, wafacash ou damanecash</p>
+										<p>Pour faciliter la tache a nos chers clients on accepte plusieurs moyens de paiement:</p>
+										<header>•Virement depuis l'appli de votre banque ou versement chez une agence CIH Bank ou banque populaire</header>
+<header>•Transfert cahsplus, wafacash ou damanecash</header>
 									</section>
 
 								</div>
