--- a/optin/index.html
+++ b/optin/index.html
@@ -8,6 +8,23 @@
 	<body class="index">
 		<div id="page-wrapper">
 
+			<!-- Header -->
+				
+
+			<!-- Banner -->
+				<section id="banner">
+
+					<!--
+						".inner" is set up as an inline-block so it automatically expands
+						in both directions to fit whatever's inside it. This means it won't
+						automatically wrap lines, so be sure to use line breaks where
+						appropriate (<br />).
+					-->
+					<div class="inner">
+
+						<header>
+							
+						</header>
 
 						<p>Abonnement <strong>Netflix</strong> moins cher et avec des moyens de paiement a la disposition de tout le monde
 </p>
