--- a/optin/index.html
+++ b/optin/index.html
@@ -1,5 +1,5 @@
 <html><head>
-		<title>Abonnement Netflix moins cher!</title>
+		<title>Abonnement moins cher!</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<link rel="stylesheet" href="assets/css/main.css">
@@ -26,7 +26,7 @@
 							
 						</header>
 
-						<p>Abonnement <strong>Netflix</strong> moins cher et avec des moyens de paiement a la disposition de tout le monde
+						<p>Abonnement <strong>premium</strong> a 100DH/mois et avec des moyens de paiement a la disposition de tout le monde
 </p>
 						<footer>
 						<ul class="buttons">
