--- a/prepaid.html
+++ b/prepaid.html
@@ -1,5 +1,5 @@
 <html lang="en"><head>
-                <title>Yassine Ayouch - Serial Entrepreneur</title><meta property="og:site_name" content="Yassine Ayouch">
+                <title>Yassine Ayouch - Prepaid</title><meta property="og:site_name" content="Yassine Ayouch">
 <meta name="google-site-verification" content="Peg6LhW4qKP2D2sdbFiboSMwxZzz_Lm7AkOcpusnavk">
 <script src="gdpr/gdprscript.js"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
